tests/ui/fail/init_fails.rs
fn main() {
    let enabled = Enabled;
}

fn foo() -> Enabled {
    unimplemented!()
}

typetrait::union! {
    pub Status = Enabled | Disabled
}


